--- a/hort_parts/templates/hort_parts/product/product_list.html
+++ b/hort_parts/templates/hort_parts/product/product_list.html
@@ -26,7 +26,7 @@
             <div class="row align-items-center">
                 <!--Desktop Logo-->
                 <div class="logo col-md-2 col-lg-2 d-none d-lg-block">
-                    <a href="#">
+                    <a href="{% url 'hort:home' %}">
                         <img src="{% static 'images/logo2.png' %}" alt="Hort.parts"
                              title="Hort.parts"/>
                     </a>
@@ -42,116 +42,8 @@
                     <!--Desktop Menu-->
                     <nav class="grid__item" id="AccessibleNav"><!-- for mobile -->
                         <ul id="siteNav" class="site-nav medium center hidearrow">
-                            <li class="lvl1 parent megamenu"><a href="#">Home <i class="anm anm-angle-down-l"></i></a>
-                                <div class="megamenu style1">
-                                    <ul class="grid mmWrapper">
-                                        <li class="grid__item large-up--one-whole">
-                                            <ul class="grid">
-                                                <li class="grid__item lvl-1 col-md-3 col-lg-3"><a href="#"
-                                                                                                  class="site-nav lvl-1">Home
-                                                    Group 1</a>
-                                                    <ul class="subLinks">
-                                                        <li class="lvl-2"><a href="index.html" class="site-nav lvl-2">Home
-                                                            1 - Classic</a></li>
-                                                        <li class="lvl-2"><a href="home2-default.html"
-                                                                             class="site-nav lvl-2">Home 2 - Default</a>
-                                                        </li>
-                                                        <li class="lvl-2"><a href="home15-funiture.html"
-                                                                             class="site-nav lvl-2">Home 15 - Furniture
-                                                            <span class="lbl nm_label1">New</span></a></li>
-                                                        <li class="lvl-2"><a href="home3-boxed.html"
-                                                                             class="site-nav lvl-2">Home 3 - Boxed</a>
-                                                        </li>
-                                                        <li class="lvl-2"><a href="home4-fullwidth.html"
-                                                                             class="site-nav lvl-2">Home 4 -
-                                                            Fullwidth</a></li>
-                                                        <li class="lvl-2"><a href="home5-cosmetic.html"
-                                                                             class="site-nav lvl-2">Home 5 -
-                                                            Cosmetic</a></li>
-                                                        <li class="lvl-2"><a href="home6-modern.html"
-                                                                             class="site-nav lvl-2">Home 6 - Modern</a>
-                                                        </li>
-                                                        <li class="lvl-2"><a href="home7-shoes.html"
-                                                                             class="site-nav lvl-2">Home 7 - Shoes</a>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                                <li class="grid__item lvl-1 col-md-3 col-lg-3"><a href="#"
-                                                                                                  class="site-nav lvl-1">Home
-                                                    Group 2</a>
-                                                    <ul class="subLinks">
-                                                        <li class="lvl-2"><a href="home8-jewellery.html"
-                                                                             class="site-nav lvl-2">Home 8 -
-                                                            Jewellery</a></li>
-                                                        <li class="lvl-2"><a href="home9-parallax.html"
-                                                                             class="site-nav lvl-2">Home 9 -
-                                                            Parallax</a></li>
-                                                        <li class="lvl-2"><a href="home10-minimal.html"
-                                                                             class="site-nav lvl-2">Home 10 -
-                                                            Minimal</a></li>
-                                                        <li class="lvl-2"><a href="home11-grid.html"
-                                                                             class="site-nav lvl-2">Home 11 - Grid</a>
-                                                        </li>
-                                                        <li class="lvl-2"><a href="home12-category.html"
-                                                                             class="site-nav lvl-2">Home 12 -
-                                                            Category</a></li>
-                                                        <li class="lvl-2"><a href="home13-auto-parts.html"
-                                                                             class="site-nav lvl-2">Home 13 - Auto
-                                                            Parts</a></li>
-                                                        <li class="lvl-2"><a href="home14-bags.html"
-                                                                             class="site-nav lvl-2">Home 14 - Bags <span
-                                                                class="lbl nm_label1">New</span></a></li>
-                                                    </ul>
-                                                </li>
-                                                <li class="grid__item lvl-1 col-md-3 col-lg-3"><a href="#"
-                                                                                                  class="site-nav lvl-1">New
-                                                    Sections</a>
-                                                    <ul class="subLinks">
-                                                        <li class="lvl-2"><a href="home11-grid.html"
-                                                                             class="site-nav lvl-2">Image Gallery</a>
-                                                        </li>
-                                                        <li class="lvl-2"><a href="home5-cosmetic.html"
-                                                                             class="site-nav lvl-2">Featured Product</a>
-                                                        </li>
-                                                        <li class="lvl-2"><a href="home7-shoes.html"
-                                                                             class="site-nav lvl-2">Columns with
-                                                            Items</a></li>
-                                                        <li class="lvl-2"><a href="home6-modern.html"
-                                                                             class="site-nav lvl-2">Text columns with
-                                                            images</a></li>
-                                                        <li class="lvl-2"><a href="home2-default.html"
-                                                                             class="site-nav lvl-2">Products
-                                                            Carousel</a></li>
-                                                        <li class="lvl-2"><a href="home9-parallax.html"
-                                                                             class="site-nav lvl-2">Parallax Banner</a>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                                <li class="grid__item lvl-1 col-md-3 col-lg-3"><a href="#"
-                                                                                                  class="site-nav lvl-1">New
-                                                    Features</a>
-                                                    <ul class="subLinks">
-                                                        <li class="lvl-2"><a href="home13-auto-parts.html"
-                                                                             class="site-nav lvl-2">Top Information Bar
-                                                            <span class="lbl nm_label1">New</span></a></li>
-                                                        <li class="lvl-2"><a href="#" class="site-nav lvl-2">Age
-                                                            Varification <span class="lbl nm_label1">New</span></a></li>
-                                                        <li class="lvl-2"><a href="#" class="site-nav lvl-2">Footer
-                                                            Blocks</a></li>
-                                                        <li class="lvl-2"><a href="#" class="site-nav lvl-2">2 New
-                                                            Megamenu style</a></li>
-                                                        <li class="lvl-2"><a href="#" class="site-nav lvl-2">Show Total
-                                                            Savings <span class="lbl nm_label3">Hot</span></a></li>
-                                                        <li class="lvl-2"><a href="#" class="site-nav lvl-2">New Custom
-                                                            Icons</a></li>
-                                                        <li class="lvl-2"><a href="#" class="site-nav lvl-2">Auto
-                                                            Currency</a></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </div>
+                            <li class="lvl1 parent megamenu">
+                                <a href="{% url 'hort:home' %}">{% trans 'Home' %}</a>
                             </li>
                             <li class="lvl1 parent megamenu"><a href="#">Product <i
                                     class="anm anm-angle-down-l"></i></a>
@@ -159,9 +51,9 @@
                                     <ul class="grid mmWrapper">
                                         <li class="grid__item one-whole">
                                             <ul class="grid">
-                                                <li class="grid__item lvl-1 col-md-3 col-lg-3"><a href="#"
-                                                                                                  class="site-nav lvl-1">Product
-                                                    Page</a>
+                                                <li class="grid__item lvl-1 col-md-3 col-lg-3">
+                                                    <a href="#" class="site-nav lvl-1">
+                                                        Product Page</a>
                                                     <ul class="subLinks">
                                                         <li class="lvl-2"><a href="product-layout-1.html"
                                                                              class="site-nav lvl-2">Product Layout 1</a>
@@ -183,9 +75,9 @@
                                                             Thumbs</a></li>
                                                     </ul>
                                                 </li>
-                                                <li class="grid__item lvl-1 col-md-3 col-lg-3"><a href="#"
-                                                                                                  class="site-nav lvl-1">Product
-                                                    Features</a>
+                                                <li class="grid__item lvl-1 col-md-3 col-lg-3">
+                                                    <a href="#" class="site-nav lvl-1">
+                                                        Product Features</a>
                                                     <ul class="subLinks">
                                                         <li class="lvl-2"><a href="short-description.html"
                                                                              class="site-nav lvl-2">Short
@@ -208,9 +100,9 @@
                                                         </li>
                                                     </ul>
                                                 </li>
-                                                <li class="grid__item lvl-1 col-md-3 col-lg-3"><a href="#"
-                                                                                                  class="site-nav lvl-1">Product
-                                                    Features</a>
+                                                <li class="grid__item lvl-1 col-md-3 col-lg-3">
+                                                    <a href="#" class="site-nav lvl-1">
+                                                        Product Features</a>
                                                     <ul class="subLinks">
                                                         <li class="lvl-2"><a href="product-with-variant-image.html"
                                                                              class="site-nav lvl-2">Product with Variant
