--- a/hort_parts/templates/hort_parts/product/product_list.html
+++ b/hort_parts/templates/hort_parts/product/product_list.html
@@ -4,7 +4,6 @@
 <title>Hort - {{ category.name }} </title>
 {% endblock title_page %}
 
-
 {% block product_page %}
 
 <div class="pageWrapper">
@@ -56,54 +55,18 @@
                                                         Product Page</a>
                                                     <ul class="subLinks">
                                                         <li class="lvl-2">
-                                                            <a href="product-layout-1.html" class="site-nav lvl-2">
+                                                            <a href="#" class="site-nav lvl-2">
                                                                 Product Layout 1</a>
                                                         </li>
-                                                        <li class="lvl-2">
-                                                            <a href="product-layout-2.html" class="site-nav lvl-2">
-                                                                Product Layout 2</a>
-                                                        </li>
-                                                        <li class="lvl-2">
-                                                            <a href="product-layout-3.html" class="site-nav lvl-2">
-                                                                Product Layout 3</a>
-                                                        </li>
-                                                        <li class="lvl-2">
-                                                            <a href="product-with-left-thumbs.html"
-                                                               class="site-nav lvl-2">
-                                                                Product With Left Thumbs</a></li>
-                                                        <li class="lvl-2">
-                                                            <a href="product-with-right-thumbs.html"
-                                                               class="site-nav lvl-2">
-                                                                Product With Right Thumbs</a></li>
-                                                        <li class="lvl-2">
-                                                            <a href="product-with-bottom-thumbs.html"
-                                                               class="site-nav lvl-2">
-                                                                Product With Bottom Thumbs</a></li>
                                                     </ul>
                                                 </li>
                                                 <li class="grid__item lvl-1 col-md-3 col-lg-3">
                                                     <a href="#" class="site-nav lvl-1">
                                                         Product Features</a>
                                                     <ul class="subLinks">
-                                                        <li class="lvl-2"><a href="short-description.html"
-                                                                             class="site-nav lvl-2">Short
-                                                            Description</a></li>
-                                                        <li class="lvl-2"><a href="product-countdown.html"
-                                                                             class="site-nav lvl-2">Product
-                                                            Countdown</a></li>
-                                                        <li class="lvl-2"><a href="product-video.html"
-                                                                             class="site-nav lvl-2">Product Video</a>
-                                                        </li>
-                                                        <li class="lvl-2"><a href="product-quantity-message.html"
-                                                                             class="site-nav lvl-2">Product Quantity
-                                                            Message</a></li>
-                                                        <li class="lvl-2"><a href="product-visitor-sold-count.html"
-                                                                             class="site-nav lvl-2">Product Visitor/Sold
-                                                            Count <span class="lbl nm_label3">Hot</span></a></li>
-                                                        <li class="lvl-2"><a href="product-zoom-lightbox.html"
-                                                                             class="site-nav lvl-2">Product
-                                                            Zoom/Lightbox <span class="lbl nm_label1">New</span></a>
-                                                        </li>
+                                                        <li class="lvl-2">
+                                                            <a href="#" class="site-nav lvl-2">
+                                                                Short Description</a></li>
                                                     </ul>
                                                 </li>
 
@@ -119,9 +82,9 @@
                 </div>
                 <div class="col-6 col-sm-6 col-md-6 col-lg-2 d-block d-lg-none mobile-logo">
                     <div class="logo">
-                        <a href="index.html">
-                            <img src="assets/images/logo.svg" alt="Hort Parts"
-                                 title="Hort Parts"/>
+                        <a href="#">
+                            <img src="{% static 'images/logo2.png' %}" alt="Hort.parts"
+                                 title="Hort.parts"/>
                         </a>
                     </div>
                 </div>
@@ -259,7 +222,7 @@
                                 <div class="list-view-item__image-column">
                                     <div class="list-view-item__image-wrapper">
                                         <!-- Image -->
-                                        <a href="product-layout-2.html"><img
+                                        <a href="#"><img
                                                 class="list-view-item__image blur-up lazyload"
                                                 data-src="assets/images/product-images/product-image1.jpg"
                                                 src="assets/images/product-images/product-image1.jpg" alt="image"
@@ -269,7 +232,7 @@
                                 </div>
                                 <div class="list-view-item__title-column">
                                     <div class="h4 grid-view-item__title">
-                                        <a href="product-layout-2.html">Camelia Reversible Jacket</a></div>
+                                        <a href="#">Camelia Reversible Jacket</a></div>
                                     <!-- Sort Description -->
                                     <p>Belle Multipurpose Bootstrap 4 Html Template that will give you and your
                                         customers a smooth shopping experience which can be used for various kinds of
