--- a/hort_parts/templates/hort_parts/product/product_list.html
+++ b/hort_parts/templates/hort_parts/product/product_list.html
@@ -7,166 +7,6 @@
 {% block product_page %}
 
 <div class="pageWrapper">
-    <!--Search Form Drawer-->
-    <div class="search">
-        <div class="search__form">
-            <form class="search-bar__form" action="#">
-                <button class="go-btn search__button" type="submit"><i class="icon anm anm-search-l"></i></button>
-                <input class="search__input" type="search" name="q" value="" placeholder="Search entire store..."
-                       aria-label="Search" autocomplete="off">
-            </form>
-            <button type="button" class="search-trigger close-btn"><i class="icon anm anm-times-l"></i></button>
-        </div>
-    </div>
-    <!--End Search Form Drawer-->
-    <!--Header-->
-    <div class="header-wrap animated d-flex">
-        <div class="container-fluid">
-            <div class="row align-items-center">
-                <!--Desktop Logo-->
-                <div class="logo col-md-2 col-lg-2 d-none d-lg-block">
-                    <a href="{% url 'hort:home' %}">
-                        <img src="{% static 'images/logo2.png' %}" alt="Hort.parts"
-                             title="Hort.parts"/>
-                    </a>
-                </div>
-                <!--End Desktop Logo-->
-                <div class="col-2 col-sm-3 col-md-3 col-lg-8">
-                    <div class="d-block d-lg-none">
-                        <button type="button" class="btn--link site-header__menu js-mobile-nav-toggle mobile-nav--open">
-                            <i class="icon anm anm-times-l"></i>
-                            <i class="anm anm-bars-r"></i>
-                        </button>
-                    </div>
-                    <!--Desktop Menu-->
-                    <nav class="grid__item" id="AccessibleNav"><!-- for mobile -->
-                        <ul id="siteNav" class="site-nav medium center hidearrow">
-                            <li class="lvl1 parent megamenu">
-                                <a href="{% url 'hort:home' %}">{% trans 'Home' %}</a>
-                            </li>
-                            <li class="lvl1 parent megamenu"><a href="#">Product
-                                <i class="anm anm-angle-down-l"></i></a>
-                                <div class="megamenu style2">
-                                    <ul class="grid mmWrapper">
-                                        <li class="grid__item one-whole">
-                                            <ul class="grid">
-                                                <li class="grid__item lvl-1 col-md-3 col-lg-3">
-                                                    <a href="#" class="site-nav lvl-1">
-                                                        Product Page</a>
-                                                    <ul class="subLinks">
-                                                        <li class="lvl-2">
-                                                            <a href="#" class="site-nav lvl-2">
-                                                                Product Layout 1</a>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                                <li class="grid__item lvl-1 col-md-3 col-lg-3">
-                                                    <a href="#" class="site-nav lvl-1">
-                                                        Product Features</a>
-                                                    <ul class="subLinks">
-                                                        <li class="lvl-2">
-                                                            <a href="#" class="site-nav lvl-2">
-                                                                Short Description</a></li>
-                                                    </ul>
-                                                </li>
-
-                                            </ul>
-                                        </li>
-
-                                    </ul>
-                                </div>
-                            </li>
-                        </ul>
-                    </nav>
-                    <!--End Desktop Menu-->
-                </div>
-                <div class="col-6 col-sm-6 col-md-6 col-lg-2 d-block d-lg-none mobile-logo">
-                    <div class="logo">
-                        <a href="#">
-                            <img src="{% static 'images/logo2.png' %}" alt="Hort.parts"
-                                 title="Hort.parts"/>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-4 col-sm-3 col-md-3 col-lg-2">
-                    <div class="site-header__search">
-                        <button type="button" class="search-trigger"><i class="icon anm anm-search-l"></i></button>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--End Header-->
-    <!--Mobile Menu-->
-    <div class="mobile-nav-wrapper" role="navigation">
-        <div class="closemobileMenu"><i class="icon anm anm-times-l pull-right"></i> Close Menu</div>
-        <ul id="MobileNav" class="mobile-nav">
-            <li class="lvl1 parent megamenu">
-                <a href="#">Home</a>
-            </li>
-            <li class="lvl1 parent megamenu"><a href="product-layout-1.html">Product <i class="anm anm-plus-l"></i></a>
-                <ul>
-                    <li><a href="product-layout-1.html" class="site-nav">Product Page<i class="anm anm-plus-l"></i></a>
-                        <ul>
-                            <li><a href="product-layout-1.html" class="site-nav">Product Layout 1</a></li>
-                            <li><a href="product-layout-2.html" class="site-nav">Product Layout 2</a></li>
-                            <li><a href="product-layout-3.html" class="site-nav">Product Layout 3</a></li>
-                            <li><a href="product-with-left-thumbs.html" class="site-nav">Product With Left Thumbs</a>
-                            </li>
-                            <li><a href="product-with-right-thumbs.html" class="site-nav">Product With Right Thumbs</a>
-                            </li>
-                            <li><a href="product-with-bottom-thumbs.html" class="site-nav last">Product With Bottom
-                                Thumbs</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="short-description.html" class="site-nav">Product Features<i class="anm anm-plus-l"></i></a>
-                        <ul>
-                            <li><a href="short-description.html" class="site-nav">Short Description</a></li>
-                            <li><a href="product-countdown.html" class="site-nav">Product Countdown</a></li>
-                            <li><a href="product-video.html" class="site-nav">Product Video</a></li>
-                            <li><a href="product-quantity-message.html" class="site-nav">Product Quantity Message</a>
-                            </li>
-                            <li><a href="product-visitor-sold-count.html" class="site-nav">Product Visitor/Sold
-                                Count </a></li>
-                            <li><a href="product-zoom-lightbox.html" class="site-nav last">Product Zoom/Lightbox </a>
-                            </li>
-                        </ul>
-                    </li>
-
-                </ul>
-            </li>
-            <li class="lvl1 parent megamenu"><a href="about-us.html">Pages <i class="anm anm-plus-l"></i></a>
-                <ul>
-                    <li><a href="cart-variant1.html" class="site-nav">Cart Page <i class="anm anm-plus-l"></i></a>
-                        <ul class="dropdown">
-                            <li><a href="cart-variant1.html" class="site-nav">Cart Variant1</a></li>
-                            <li><a href="cart-variant2.html" class="site-nav">Cart Variant2</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="compare-variant1.html" class="site-nav">Compare Product <i class="anm anm-plus-l"></i></a>
-                        <ul class="dropdown">
-                            <li><a href="compare-variant1.html" class="site-nav">Compare Variant1</a></li>
-                            <li><a href="compare-variant2.html" class="site-nav">Compare Variant2</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="checkout.html" class="site-nav">Checkout</a></li>
-                    <li><a href="about-us.html" class="site-nav">About Us<span class="lbl nm_label1">New</span></a></li>
-                    <li><a href="contact-us.html" class="site-nav">Contact Us</a></li>
-                    <li><a href="faqs.html" class="site-nav">FAQs</a></li>
-                    <li><a href="lookbook1.html" class="site-nav">Lookbook<i class="anm anm-plus-l"></i></a>
-                        <ul>
-                            <li><a href="lookbook1.html" class="site-nav">Style 1</a></li>
-                            <li><a href="lookbook2.html" class="site-nav last">Style 2</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="404.html" class="site-nav">404</a></li>
-                    <li><a href="coming-soon.html" class="site-nav">Coming soon<span
-                            class="lbl nm_label1">New</span></a></li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-    <!--End Mobile Menu-->
 
     <!--Body Content-->
     <div id="page-content">
@@ -218,32 +58,31 @@
                     <div class="productList">
                         <div class="list-view-items grid--view-items">
                             <!--ListView Item-->
+                            {% for p in products %}
                             <div class="list-product list-view-item">
                                 <div class="list-view-item__image-column">
                                     <div class="list-view-item__image-wrapper">
                                         <!-- Image -->
-                                        <a href="#"><img
+                                        <a href="{{ p.get_absolute_url }}"><img
                                                 class="list-view-item__image blur-up lazyload"
                                                 data-src="assets/images/product-images/product-image1.jpg"
-                                                src="assets/images/product-images/product-image1.jpg" alt="image"
-                                                title="product"></a>
+                                                src="assets/images/product-images/product-image1.jpg"></a>
                                         <!-- End Image -->
                                     </div>
                                 </div>
                                 <div class="list-view-item__title-column">
                                     <div class="h4 grid-view-item__title">
-                                        <a href="#">Camelia Reversible Jacket</a></div>
+                                        <a href="{{ p.get_absolute_url }}">{{ p.name }}</a></div>
                                     <!-- Sort Description -->
-                                    <p>Belle Multipurpose Bootstrap 4 Html Template that will give you and your
-                                        customers a smooth shopping experience which can be used for various kinds of
-                                        stores such as boutiques, bookstores, technology stores, jewelries and other
-                                        types of web shops....</p>
+                                    <p><a href="{{ p.get_absolute_url }}">Article: {{ p.article }}</a></p>
+                                    <p><a href="{{ p.get_absolute_url }}">Specification: {{ p.specification }}</a></p>
                                     <!-- End Sort Description -->
                                     <form class="variants" action="#">
                                         <button class="btn btn--small" type="button">Select Options</button>
                                     </form>
                                 </div>
                             </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
