--- a/hort_parts/templates/hort_parts/product/main.html
+++ b/hort_parts/templates/hort_parts/product/main.html
@@ -23,6 +23,8 @@
 
 <body class="template-collection belle">
 
+{% include 'hort_parts/product/header.html' %}
+
 {% block product_page %}
 {% endblock product_page %}
 
@@ -30,6 +32,8 @@
 
 <script src="{% static 'js/vendor/jquery-3.3.1.min.js' %}"></script>
 <script src="{% static 'js/vendor/jquery.cookie.js' %}"></script>
+<script src="{% static 'js/vendor/photoswipe.min.js' %}"></script>
+<script src="{% static 'js/vendor/photoswipe-ui-default.min.js' %}"></script>
 <script src="{% static 'js/vendor/modernizr-3.6.0.min.js' %}"></script>
 <script src="{% static 'js/vendor/wow.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
