--- a/hort_parts/templates/hort_parts/product/main.html
+++ b/hort_parts/templates/hort_parts/product/main.html
@@ -40,7 +40,7 @@
 <script src="{% static 'js/plugins.js' %}"></script>
 <script src="{% static 'js/popper.min.js' %}"></script>
 <script src="{% static 'js/lazysizes.js' %}"></script>
-<script src="{% static 'js/main.js' %}"></script>
+<script src="{% static 'js/main_2.js' %}"></script>
 
 </body>
 </html>
