--- a/hort_parts/templates/hort_parts/product/product_list.html
+++ b/hort_parts/templates/hort_parts/product/product_list.html
@@ -51,7 +51,7 @@
                     <div class="category-description">
                         <h3>Category Description</h3>
                         <p>
-                            {{ category.info }}
+                            {{ category.info|safe }}
                         </p>
                     </div>
                     <hr>
