--- a/hort_parts/templates/hort_parts/include/footer.html
+++ b/hort_parts/templates/hort_parts/include/footer.html
@@ -3,12 +3,35 @@
 <footer>
 
     <div class="footer-main">
-
         <div class="row">
-
             <div class="col-three tab-full footer-social">
 
                 <h4 class="h05">Hort.</h4>
+                <ul class="list-links">
+                    <li><a href="#home">{% trans 'Home' %}</a></li>
+                    <li><a href="#about">{% trans 'About Us' %}</a></li>
+                    <li><a href="#warranty">{% trans 'Warranty' %}</a></li>
+                    <li><a href="#download">{% trans 'Download materials' %}</a></li>
+                    <li><a href="#news">{% trans 'News' %}</a></li>
+                    <li><a href="#contact">{% trans 'Contact' %}</a></li>
+                </ul>
+
+            </div>
+
+            <div class="col-three tab-full footer-social">
+
+                <h4 class="h05">{% trans 'Products' %}.</h4>
+
+                <ul class="list-links">
+                    <li><a href="shockabsorber/">Shock absorbers</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+
+            </div>
+
+            <div class="col-three tab-full footer-social">
+
+                <h4 class="h05">{% trans 'Products' %}.</h4>
 
                 <ul class="list-links">
                     <li><a href="#">About Us</a></li>
@@ -19,56 +42,27 @@
 
             <div class="col-three tab-full footer-social">
 
-                <h4 class="h05">Hort.</h4>
-
-                <ul class="list-links">
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Instagram</a></li>
-                </ul>
-
-            </div>
-
-
-            <div class="col-three tab-full footer-social">
-
-                <h4 class="h05">Site.</h4>
-
-                <ul class="list-links">
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Instagram</a></li>
-                </ul>
-
-            </div>
-
-            <div class="col-three tab-full footer-social">
-
-                <h4 class="h05">Follow Us.</h4>
+                <h4 class="h05">{% trans 'Follow Us' %}.</h4>
 
                 <ul class="list-links">
                     <li><a href="https://twitter.com/Hort_Parts" target="_blank">Twitter</a></li>
                     <li><a href="https://www.instagram.com/hortparts/" target="_blank">Instagram</a></li>
                 </ul>
-
             </div>
 
         </div>
-
     </div>
 
     <div class="footer-bottom">
-
         <div class="row">
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Hort.Parts 2009.</span>
+                    <span>© {% trans 'Copyright' %} Hort.Parts 2009.</span>
                 </div>
-
-
             </div>
 
         </div>
-
     </div>
 
     <div id="go-top">
