--- a/hort_parts/templates/hort_parts/index.html
+++ b/hort_parts/templates/hort_parts/index.html
@@ -672,6 +672,7 @@
             <div class="col-twelve">
                 <h3>Download Materials</h3>
 
+
             </div>
         </div>
 
@@ -701,6 +702,10 @@
                         you'll know when you find it.
                     </p>
 
+                    <div class="testimonial-author">
+                        <img src="{% static 'images/news/ha30356_m.jpg' %}">
+                    </div>
+
                 </li>
 
                 <li>
@@ -711,12 +716,9 @@
                     </p>
 
                     <div class="testimonial-author">
-                        <img src="{% static 'images/avatars/user-03.jpg' %}" alt="Author image">
-                        <div class="author-info">
-                            John Doe
-                            <span>CEO, ABC Corp.</span>
-                        </div>
+                        <img src="{% static 'images/news/ha30356_m.jpg' %}">
                     </div>
+
                 </li> <!-- end slide -->
 
             </ul>
